--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hapi/hapi": "^20.1.3",
     "@hapi/inert": "^6.0.3",
+    "dotenv": "^9.0.2",
     "lodash": "^4.17.21",
     "request": "^2.88.2"
   },
