--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@hapi/hapi": "^20.1.3",
     "@hapi/inert": "^6.0.3",
     "dotenv": "^9.0.2",
-    "lodash": "^4.17.21",
-    "request": "^2.88.2"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "faker": "^5.5.3",
     "jsonfile": "^6.1.0",
+    "request": "^2.88.2",
     "uuid": "^8.3.2"
   }
 }
